# trip-nordic

./: .gitignore  README.md  lefthook.yml
activity_filter/: .env.template  pyproject.toml
activity_filter/src/: config.py  fi_filters_utils.py  filters_extractor.py  mongodb_utils.py  sync_fi_filters.py  sync_filters.py
activity_service/: .env.template  .gitignore  go.sum
activity_service/cmd/fi/: main.go
activity_service/cmd/se/: main.go
activity_service/models/fi/: fi.go
activity_service/models/se/: se.go
activity_service/mongo/: mongo.go
activity_service/scripts/: api_client.go
activity_service/utils/: params.go  stringutils.go
backend/: go.mod  go.sum
backend/activity_graph/: go.mod
backend/activity_graph/graphql/: gqlgen.yml
backend/activity_service/: go.mod  go.sum
backend/auth_service/: pyproject.toml
backend/auth_service/auth_service/: settings.py  urls.py
backend/auth_service/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/auth_service/users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_date_joined_and_more.py  0003_alter_user_options_user_date_joined_user_first_name_and_more.py
backend/clients/: activity.go  activity_client.go  fi_activity_client.go  se_activity_client.go
backend/cmd/: main.go
backend/config/: env.go
backend/db/: mongo.go
backend/fastql/: .gitignore  config.py  db.py  main.py  mongodb_client.py  pyproject.toml  schema.py  types.py  utils.py
backend/graph/: .env.template  pyproject.toml
backend/graph/activities/: apps.py  models.py  schema.py
backend/graph/activities/migrations/: 0001_initial.py  0002_activity_categories_str_activity_seasons_str.py  0003_rename_categories_str_activity_categoriesstr_and_more.py
backend/graph/graph/: asgi.py  settings.py  urls.py  wsgi.py
backend/graphql/: server.go
backend/internal/: gqlgen.yml  server.go
backend/models/: fi_activity_response.go  se_activity_response.go
backend/restful/: .env.template  .gitignore  pyproject.toml
backend/restful-api/: pyproject.toml
backend/restful-api/users/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/restful-api/users/migrations/: 0001_initial.py
backend/restful-api/users/utils/: models_abstracts.py
backend/scripts/: api_client.go
backend/types/: res_types.go
backend/utils/: hash.go  params.go  slice.go  utils.go
frontend/: README.md  bun.lockb  express-entry.ts  global.d.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/components/: Footer.tsx
frontend/layouts/: LayoutDefault.tsx  tailwind.css
frontend/pages/: +Head.tsx  +client.ts  +config.ts
web/: .env.template  .gitignore  README.md  apis.ts  biome.json  bun.lockb  cloudinary.ts  codegen.ts  components.json  constants.ts  express-entry.ts  globalStore.ts  package-lock.json  package.json  pageHandler.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/database/: todoItems.ts
web/gql/: fragment-masking.ts  gql.ts  graphql.ts
web/graphql/: client.ts
web/hooks/: use-protected-add-trip.ts  use-toast.ts  useEditableMode.ts  useLogout.ts
web/layouts/: LayoutDefault.tsx  style.css  tailwind.css
web/lib/: authSchemas.ts  definitions.ts
web/pages/: +Head.tsx  +config.ts  +onBeforeRender.ts  +onPageTransitionEnd.ts  +onPageTransitionStart.ts
web/server/: create-todo-handler.ts  schema.graphql  vike-handler.ts
web/states/: useAuthStore.ts  useKeepStore.ts  useTripState.ts  useTripsState.ts
web/types/: explore.ts  pageContext.d.ts  shared.ts  trips.ts  vike.d.ts
web/utils/: assetsHelper.ts  authHelper.ts  ids.ts  timing.ts
(+232 files in other folders)
