[project]
name = "fastql"
version = "0.1.0"
description = ""
authors = [
    {name = "yujhenchen",email = "yujhen.chen93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "strawberry-graphql[debug-server] (>=0.269.0,<0.270.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pymongo[srv] (>=4.13.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
