[project]
name = "graph"
version = "0.1.0"
description = ""
authors = [
    {name = "yujhenchen",email = "yujhen.chen93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "graphene-django (>=3.2.3,<4.0.0)",
    "django (>=5.1.7,<6.0.0)",
    "pymongo[srv] (>=4.11.3,<5.0.0)",
    "django-mongodb-backend (>=5.1.0b1,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
